# changelog-x

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  deny.toml  dist-workspace.toml  release-please-config.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release-please.yml  release.yml  security.yml
src/: error.rs  lib.rs  main.rs
src/ai/: commit_data.rs  context.rs  credentials.rs  enhancer.rs  generator.rs  mod.rs
src/changelog/: generator.rs  mod.rs
src/config/: loader.rs  mod.rs
src/ui/: mod.rs  progress.rs  prompts.rs
tests/: env_config.rs  generate_unreleased.rs
