[package]
name = "changelog-x"
version = "0.1.1"
edition = "2024"
description = "Generate high-quality changelogs from conventional commits with AI enhancement"
license = "MIT"
repository = "https://github.com/maikbasel/changelog-x"
homepage = "https://github.com/maikbasel/changelog-x"

[[bin]]
name = "cgx"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Changelog generation
git-cliff-core = "2"
git-conventional = "0.12"

# AI integration
genai = "0.5"

# Interactive prompts
inquire = { version = "0.9", features = ["editor"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.0"

# JSON Schema generation for structured AI output
schemars = "1.0"

# Template rendering for changelog formats
tera = "1"

# Configuration (layered: defaults → user → project → env vars)
config = { version = "0.15", features = ["convert-case"] }

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Terminal output
console = "0.15"
indicatif = "0.17"

# Error handling
anyhow = "1"
thiserror = "2"

# Config directories (cross-platform)
directories = "6"

# Secure credential storage
keyring = { version = "3", default-features = false, features = ["sync-secret-service", "crypto-rust"] }
indexmap = "2.13.0"
regex = "1.12.3"
git2 = "0.20.4"

[dev-dependencies]
tempfile = "3"
cargo-husky = { version = "1", default-features = false, features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
expect_used = "warn"

[profile.release]
lto = true
strip = true
codegen-units = 1

[profile.dist]
inherits = "release"
